--- a/Daily/2024-05-08 - крякозябры в wordpad.md
+++ b/Daily/2024-05-08 - крякозябры в wordpad.md
@@ -1,3 +1,7 @@
 Панель управления - региональные стандарты - дополнительно (вверху) - изменить язык системы - поставить галочку " бета версия ..использовать Юникод .."
 
+#windows
+
+
+
 
