--- a/HTML/2023-10-17-Встраивает видео с Youtube.md
+++ b/HTML/2023-10-17-Встраивает видео с Youtube.md
@@ -8,7 +8,7 @@
 <iframe src="https://www.youtube.com/embed/NnTvZWp5Q7o"></iframe>
 ```
 
-### Встраивает видео с Youtube
+### Встраивает видео с YouTube
 
 Основной синтаксис выглядит так:
 
